--- a/registration.html
+++ b/registration.html
@@ -30,7 +30,7 @@
 				<div class="logInOrRegister">
 					<p> Masz już konto? </p>
 					<div class="columns100"> 
-						<div class="col-1"><p> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj login"></div>
+						<div class="col-1"><p> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj hasło"></div>
 					</div> 
 					<div class="columns100"> 
 						<div class="col-1"><p> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj hasło"></div>
@@ -39,7 +39,13 @@
 				</div>
 				<div class="logInOrRegister">
 					<p> Nie masz jeszcze konta? </p>
-					<div class="submit"><a href="registration.html"><input class="submit2" type="submit" value="Zarejestruj się"></a></div>		
+					<div class="columns100"> 
+						<div class="col-1"><p> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj nowy login"></div>
+					</div> 
+					<div class="columns100">  
+						<div class="col-1"><p> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj nowe hasło"></div>
+					</div>
+					<div class="submit"><a href="personalBudget.html"><input class="submit2" type="submit" value="Zarejestruj się"></a></div>		
 				</div>
 			</div> 
 		</main>
