--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<div class="logInOrRegister">
 					<p> Masz już konto? </p>
 					<div class="columns100"> 
-						<div class="col-1"><p> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj login"></div>
+						<div class="col-1"><p class="pLogin"> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj login"></div>
 					</div> 
 					<div class="columns100"> 
-						<div class="col-1"><p> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj hasło"></div>
+						<div class="col-1"><p class="pLogin"> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj hasło"></div>
 					</div> 
 					<div class="submit"><a href="personalBudget.html"><input type="submit" value="Zaloguj się"></a></div>
 				</div>
