Added add Expense begin settings

--- a/personalBudget.html
+++ b/personalBudget.html
@@ -30,10 +30,10 @@
 			<ul class="menu">
 				<li><a href="personalBudget.html">Strona główna</a></li>
 				<li><a href="addIncome.html">Dodaj przychód</a></li>
-				<li><a href="#">Dodaj wydatek</a></li>
+				<li><a href="addExpense.html">Dodaj wydatek</a></li>
 				<li><a href="#">Przeglądaj bilans</a></li>
 				<li><a href="#">Ustawienia</a></li>
-				<li><a href="#">Wyloguj się</a></li>
+				<li><a href="index.html">Wyloguj się</a></li>
 			</ul>
 		
 		</nav>
