--- a/addExpense.html
+++ b/addExpense.html
@@ -31,7 +31,12 @@
 				<li><a href="addIncome.html">Dodaj przychód</a></li>
 				<li><a href="addExpense.html">Dodaj wydatek</a></li>
 				<li><a href="#">Przeglądaj bilans</a></li>
-				<li><a href="#">Ustawienia</a></li>
+				<li class="gap"><a href="#">Ustawienia</a>
+					<ol>
+						<li><a href="#">Zmień e-mail</a></li>
+						<li><a href="#">Zmień hasło</a></li>
+					</ol>
+				</li>
 				<li><a href="index.html">Wyloguj się</a></li>
 			</ul>
 		
