--- a/addIncome.html
+++ b/addIncome.html
@@ -31,10 +31,9 @@
 				<li><a href="addIncome.html">Dodaj przychód</a></li>
 				<li><a href="addExpense.html">Dodaj wydatek</a></li>
 				<li><a href="#">Przeglądaj bilans</a></li>
-				<li><a href="#">Ustawienia</a>
+				<li class="gap"><a href="#">Ustawienia</a>
 					<ol>
-						<li><a href="#">Zmień imię</a></li>
-						<li><a href="#">Zmień adres e-mail</a></li>
+						<li><a href="#">Zmień e-mail</a></li>
 						<li><a href="#">Zmień hasło</a></li>
 					</ol>
 				</li>
