Add whole menu - it works

--- a/addIncome.html
+++ b/addIncome.html
@@ -26,14 +26,14 @@
 			
 		<nav id="topBar">
 		
-			<ul class="menu">
+			<ul>
 				<li><a href="personalBudget.html">Strona główna</a></li>
 				<li><a href="addIncome.html">Dodaj przychód</a></li>
 				<li><a href="addExpense.html">Dodaj wydatek</a></li>
-				<li><a href="#">Przeglądaj bilans</a></li>
+				<li><a href="browseTheBalance.html">Przeglądaj bilans</a></li>
 				<li class="gap"><a href="#">Ustawienia</a>
 					<ol>
-						<li><a href="#">Zmień e-mail</a></li>
+						<li><a href="#">Zmień adres e-mail</a></li>
 						<li><a href="#">Zmień hasło</a></li>
 					</ol>
 				</li>
@@ -74,7 +74,7 @@
 						<div><label for="commentOfIncome">Komentarz (opcjonalnie):</label></div>
 						<div><textarea class="form-control" rows="1" name = "commentOfIncome" id="commentOfIncome"></textarea></div>
 					</div>
-					<div class="submit"><a href="#"><input class="submit2" type="submit" value="Zapisz"></a></div>	
+					<div class="submit"><a href="#"><input class="submit2" type="submit" value="Dodaj"></a></div>	
 					<div class="submit"><a href="#"><input class="submit2" type="submit" value="Anuluj"></a></div>	
 				</div>
 			</div>
