--- a/addExpense.html
+++ b/addExpense.html
@@ -26,14 +26,14 @@
 			
 		<nav id="topBar">
 		
-			<ul class="menu">
+			<ul>
 				<li><a href="personalBudget.html">Strona główna</a></li>
 				<li><a href="addIncome.html">Dodaj przychód</a></li>
 				<li><a href="addExpense.html">Dodaj wydatek</a></li>
-				<li><a href="#">Przeglądaj bilans</a></li>
+				<li><a href="browseTheBalance.html">Przeglądaj bilans</a></li>
 				<li class="gap"><a href="#">Ustawienia</a>
 					<ol>
-						<li><a href="#">Zmień e-mail</a></li>
+						<li><a href="#">Zmień adres e-mail</a></li>
 						<li><a href="#">Zmień hasło</a></li>
 					</ol>
 				</li>
