--- a/addIncome.html
+++ b/addIncome.html
@@ -19,12 +19,12 @@
 	<article>
 		<header>
 <!--			<div class="topToLoginAndRegister"></div> !-->
-			<div class="topPersonalBudget">
+			<div class="top-personal-budget">
 				<h1>BUDŻET OSOBISTY</h1>
 				<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 			</div>
 			
-		<nav id="topBar">
+		<nav id="top-bar">
 		
 			<ul>
 				<li><a href="personalBudget.html">Strona główna</a></li>
@@ -44,15 +44,15 @@
 		</header>
 		<main>
 			<div class="content">
-				<div class="inputsBody">
+				<div class="inputs-body">
 				<h3>DODAJ PRZYCHÓD</h3>
 					<div class="divInput">
-						<div class="colText"><p class="p-input"><label for="amount">Kwota:</label></p></div>
-						<div class="colInput"><input type="text" value="" name="amount" id="amount"></div>	
+						<div class="col-text"><p class="p-input"><label for="amount">Kwota:</label></p></div>
+						<div class="col-input"><input type="text" value="" name="amount" id="amount"></div>	
 					</div>
 					<div class="divInput">
-						<div class="colText"><p class="p-input"><label for="theDate">Data:</label></p></div>
-						<div class="colInput"><input type="date" name="theDate" id="theDate"></div>
+						<div class="col-text"><p class="p-input"><label for="theDate">Data:</label></p></div>
+						<div class="col-input"><input type="date" name="theDate" id="theDate"></div>
 					</div>
 					
 					<p class="p-input-radio">Kategoria płatności:</p>
@@ -70,7 +70,7 @@
 						<label>	<input type="radio" name="categoryOfIncome" value="Inne">Inne</label>
 					</div>
 				
-					<div class="divInputTextArea">
+					<div class="div-input-text-area">
 						<div><label for="commentOfIncome">Komentarz (opcjonalnie):</label></div>
 						<div><textarea class="form-control" rows="1" name = "commentOfIncome" id="commentOfIncome"></textarea></div>
 					</div>
@@ -81,6 +81,9 @@
 		</main>
 		
 		<footer>
+			<div class="bottom-content">
+				<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+			</div>
 		</footer>
 	</article>
 	<script src="src/script.js"></script>
