--- a/browseTheBalance.html
+++ b/browseTheBalance.html
@@ -18,13 +18,12 @@
 
 	<article>
 		<header>
-<!--			<div class="topToLoginAndRegister"></div> !-->
-			<div class="topPersonalBudget">
+			<div class="top-personal-budget">
 				<h1>BUDŻET OSOBISTY</h1>
 				<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 			</div>
 			
-		<nav id="topBar">
+		<nav id="top-bar">
 		
 			<ul>
 				<li><a href="personalBudget.html">Strona główna</a></li>
@@ -44,13 +43,30 @@
 		</header>
 		<main>
 			<div class="content">
-				<div class="inputsBody">
-				<h3>PRZEGLĄDAJ BILANS</h3>
+				<div class="inputs-body">
+					<h3>PRZEGLĄDAJ BILANS</h3>
+				</div>
+				<div class="menu-select">
+					<div class="col-text2"><p class="p-input"><label class="select-option" for="periodOfTime">Wybierz okres czasu:</label></p></div>
+					<div class="col-input-2">
+						<select class="select-option" id="periodOfTime" name="periodOfTime">
+							<option value="currentMonth">Bieżący miesiąc</option>
+							<option value="previousMonth">Poprzedni miesiąc</option>
+							<option value="currentYear">Bieżący rok</option>
+							<option value="selectedPeriod">Wybrany okres</option>
+						</select>
+					</div>
+					<div class="col-input-3">
+						<a href="#"><input class="submit2" type="submit" value="Zapisz"></a>
+					</div>
 				</div>
 			</div>
 		</main>
 		
 		<footer>
+			<div class="bottom-content">
+				<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+			</div>
 		</footer>
 	</article>
 	<script src="src/script.js"></script>
