--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
 
 	<article>
 		<header>
-<!--			<div class="topToLoginAndRegister"></div> !-->
 			<div class="top">
 				<h1>BUDŻET OSOBISTY</h1>
 				<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 			</div>
 		</header>
 		<main>
-			<div class="logIn">  
-				<div class="logInOrRegister">
+			<div class="log-in">  
+				<div class="log-in-or-register">
 					<p> Masz już konto? </p>
 					<div class="columns100"> 
-						<div class="col-1"><p class="pLogin"> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj login"></div>
+						<div class="col-1"><p class="p-login"> Login</p></div> <div class="col-2"><input type="text" name="login" placeholder="Podaj login"></div>
 					</div> 
 					<div class="columns100"> 
-						<div class="col-1"><p class="pLogin"> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj hasło"></div>
+						<div class="col-1"><p class="p-login"> Hasło</p></div> <div class="col-2"><input type="password" name="haslo" placeholder="Podaj hasło"></div>
 					</div> 
 					<div class="submit"><a href="personalBudget.html"><input type="submit" value="Zaloguj się"></a></div>
 				</div>
-				<div class="logInOrRegister">
+				<div class="log-in-or-register">
 					<p> Nie masz jeszcze konta? </p>
 					<div class="submit"><a href="registration.html"><input class="submit2" type="submit" value="Zarejestruj się"></a></div>		
 				</div>
@@ -45,6 +44,9 @@
 		</main>
 		
 		<footer>
+			<div class="bottom">
+				<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+			</div>
 		</footer>
 	</article>
 </body>
