--- a/personalBudget.html
+++ b/personalBudget.html
@@ -20,12 +20,12 @@
 	<article>
 		<header>
 <!--			<div class="topToLoginAndRegister"></div> !-->
-			<div class="topPersonalBudget">
+			<div class="top-personal-budget">
 				<h1>BUDŻET OSOBISTY</h1>
 				<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 			</div>
 			
-		<nav id="topBar">
+		<nav id="top-bar">
 		
 			<ul>
 				<li><a href="personalBudget.html">Strona główna</a></li>
@@ -54,6 +54,9 @@
 		</main>
 		
 		<footer>
+			<div class="bottom-content">
+				<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+			</div>
 		</footer>
 	</article>
 </body>
