--- a/personalBudget.html
+++ b/personalBudget.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="pl">
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
 	<title>Budżet osobisty</title>
 	
-	<meta name="description" content="Aplikacja Budżet osobisty pomoże Ci w zarządzaniu swoimi wydatkami" />
-	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<meta name="description" content="Aplikacja Budżet osobisty pomoże Ci w zarządzaniu swoimi wydatkami">
+	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
+	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="style.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 	
@@ -17,49 +17,81 @@
 
 <body>
 
-
-	<article>
+	
+	<div class="container-fluid">
 		<header>
-<!--			<div class="topToLoginAndRegister"></div> !-->
-			<div class="top-personal-budget">
-				<h1>BUDŻET OSOBISTY</h1>
-				<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-lg-6">
+					<div class="p-4 mt-5">
+						<h1>BUDŻET OSOBISTY</h1>
+						<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
+					</div>
+				</div>
 			</div>
-			
-		<nav id="top-bar">
-		
-			<ul>
-				<li><a href="personalBudget.html">Strona główna</a></li>
-				<li><a href="addIncome.html">Dodaj przychód</a></li>
-				<li><a href="addExpense.html">Dodaj wydatek</a></li>
-				<li><a href="browseTheBalance.html">Przeglądaj bilans</a></li>
-				<li class="gap"><a href="#">Ustawienia</a>
-					<ol>
-						<li><a href="#">Zmień adres e-mail</a></li>
-						<li><a href="#">Zmień hasło</a></li>
-					</ol>
-				</li>
-				<li><a href="index.html">Wyloguj się</a></li>
-			</ul>
-		
-		</nav>
+			<div class="row justify-content-center">
+				<nav class="navbar navbar-expand-lg col-sm-12 col-xl-10 col-xxl-8 navbar-light top-bar p-0">
+					<div class="container-fluid padding-991"> 
+						<a class="navbar-brand text-light mx-0" href="#"></a>
+						<button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon "></span>
+						</button>  
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav mx-auto me-auto mb-2 mb-lg-0">
+								<li class="nav-item li-change-color">
+									<a class="nav-link active text-light py-3" aria-current="page" href="personalBudget.html">Strona główna</a>
+								</li>
+								<li class="nav-item li-change-color">
+									<a class="nav-link active text-light py-3" aria-current="page" href="addIncome.html">Dodaj przychód</a>
+								</li>
+								<li class="nav-item li-change-color">
+									<a class="nav-link active text-light py-3" aria-current="page" href="addExpense.html">Dodaj wydatek</a>
+								</li>
+								<li class="nav-item li-change-color">
+									<a class="nav-link text-light py-3" href="browseTheBalance.html">Przeglądaj bilans</a>
+								</li>
+								<li class="nav-item dropdown li-change-color">
+									<a class="nav-link dropdown-toggle text-light py-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									Ustawienia
+									</a>
+									<ul class="dropdown-menu dropdown-menu-dark mt-neg" aria-labelledby="navbarDropdown">
+										<li class="dropdown-my-color"><a class="dropdown-item text-light py-2" href="#">Zmień adres e-mail</a></li>
+										<li class="dropdown-my-color"><a class="dropdown-item text-light py-2" href="#">Zmień hasło</a></li>
+									</ul>
+								</li>
+								<li class="nav-item li-change-color">
+									<a class="nav-link active text-light py-3" aria-current="page" href="index.html">Wyloguj się</a>
+								</li>
+							</ul>
+						</div>
+					</div> 
+				</nav>
+			</div>
 		</header>
 		<main>
-			<div class="content">
-				<h2>Aplikacja Budżet Osobisty</h2>
-				<p class="p-content">Budżet Osobisty pozwala na analizę tego jakie mamy przychody np. związane z wynagrodzeniem, stypendium itd. oraz ile pieniędzy wydajemy na poszczególne rzeczy: opłaty związane z mieszkaniem, kredytami, jedzeniem, rozrywką, remontami, wakacjami, ubezpieczeniami. Dzięki tej analizie łatwiej jest nam zaoszczędzić pieniądze na nowy cel. np samochód. </p>
-				
-				<h2>Jak działa Aplikacja Budżet Osobisty?</h2>
-				<p class="p-content">Mamy do wyboru 4 główne opcje w aplikacji: dodaj przychód (możemy dodać np.: wynagrodzenie, odsetki bankowe, sprzedaż na allegro), dodaj wydatek (mozemy dodać: sposób płatności: gotówką, kartą debetową, kartą kredytową w następującychj kategoriach: jedzenie, mieszkanie, transport, telekomunikacja, opieka zdrowotna itp.), przeglądaj bilans (tutaj zaprezentowane jest podsumowanie przychodów oraz wydatków w danym okresie dla danych kategorii)oraz ustawienia gdzie możemy zmienić: adres e-mail lub hasło.</p>			
-			</div>
+			<article>
+				<div class="row justify-content-center">
+					<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+						<div class="content mt-2 p-4">
+							<h2>Aplikacja Budżet Osobisty</h2>
+							<p class="p-content p-2">Budżet Osobisty pozwala na analizę tego jakie mamy przychody npieszkaniem, kredytami, jedzeniem, rozrywką, remontami, wakacjami, ubezpieczeniami. Dzięki tej analizie łatwiej jest nam zaoszczędzić pieniądze na nowy cel. np samochód. </p>
+							
+							<h2>Jak działa Aplikacja Budżet Osobisty?</h2>
+							<p class="p-content p-2">Mamy do wyboru 4 główne opcje w aplikacji: dodaj przychód (możemy dodać np.: wynagrodzenie, odsetki bankowe, sprzedaż na allegro), dodaj wydatek (mozemy dodać: sposób płatności: gotówką, kartą debetową, kartą kredytową w następującychj kategoriach: jedzenie, mieszkanie, transport, telekomunikacja, opieka zdrowotna itp.), przeglądaj bilans (tutaj zaprezentowane jest podsumowanie przychodów oraz wydatków w danym okresie dla danych kategorii)oraz ustawienia gdzie możemy zmienić: adres e-mail lub hasło.</p>	
+						</div>
+					</div>
+				</div>
+			</article>
 		</main>
-		
 		<footer>
-			<div class="bottom-content">
-				<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+			<div class="row justify-content-center">	
+				<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+					<div class="p-2">
+						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
+					</div>
+				</div>
 			</div>
 		</footer>
-	</article>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="src/script.js"></script>
