Adjusting browseTheBalance to a lower resolution

--- a/browseTheBalance.html
+++ b/browseTheBalance.html
@@ -76,7 +76,7 @@
 							<form action="#" method="post">
 								<div class="d-flex flex-row bd-highlight div-balance-buttons mx-auto p-2">
 									<div class="bd-highlight balance-width">
-										<label class="p-input-radio mb-2 mt-1" for="paymentMethod">Wybierz okres czasu:</label>
+										<label class="p-input-radio mb-2 mt-1 w-100" for="paymentMethod">Wybierz okres czasu:</label>
 									</div>
 									<div class="bd-highlight balance-width">
 										<select class="form-select form-select-sm mb-0 mt-1" aria-label="sposob platnosci" name="paymentMethod" id="paymentMethod">
@@ -86,7 +86,7 @@
 											<option value="allegro">Wybrany okres</option>
 										</select> 
 									</div>
-									<div class="bd-highlight balance-width submit2">
+									<div class="bd-highlight balance-width submit2 small-text">
 										<button type="submit" class="btn btn-warning">Przeglądaj</button>
 									</div>
 								</div>
