--- a/addIncome.html
+++ b/addIncome.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/fontello.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 	
@@ -23,13 +24,13 @@
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-lg-6">
 					<div class="p-4 mt-5">
-						<h1>BUDŻET OSOBISTY</h1>
+						<h1><i class="icon-dollar-1"></i>BUDŻET OSOBISTY</h1>
 						<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 					</div>
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<nav class="navbar navbar-expand-lg col-sm-12 col-xl-10 col-xxl-8 navbar-light top-bar p-0">
+				<nav class="navbar navbar-expand-xl col-xl-12 col-xxl-9 navbar-light top-bar p-0">
 					<div class="container-fluid padding-991"> 
 						<a class="navbar-brand text-light mx-0" href="#"></a>
 						<button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +39,20 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mx-auto me-auto mb-2 mb-lg-0">
 								<li class="nav-item li-change-color">
-									<a class="nav-link active text-light py-3" aria-current="page" href="personalBudget.html">Strona główna</a>
+									<a class="nav-link active text-light py-3" aria-current="page" href="personalBudget.html"><i class="icon-home"></i>Strona główna</a>
 								</li>
 								<li class="nav-item li-change-color">
-									<a class="nav-link active text-light py-3" aria-current="page" href="addIncome.html">Dodaj przychód</a>
+									<a class="nav-link active text-light py-3" aria-current="page" href="addIncome.html"><i class="icon-dollar"></i>Dodaj przychód</a>
 								</li>
 								<li class="nav-item li-change-color">
-									<a class="nav-link active text-light py-3" aria-current="page" href="addExpense.html">Dodaj wydatek</a>
+									<a class="nav-link active text-light py-3" aria-current="page" href="addExpense.html"><i class="icon-basket"></i>Dodaj wydatek</a>
 								</li>
 								<li class="nav-item li-change-color">
-									<a class="nav-link text-light py-3" href="browseTheBalance.html">Przeglądaj bilans</a>
+									<a class="nav-link text-light py-3" href="browseTheBalance.html"><i class="icon-chart-bar"></i>Przeglądaj bilans</a>
 								</li>
 								<li class="nav-item dropdown li-change-color">
 									<a class="nav-link dropdown-toggle text-light py-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Ustawienia
+									<i class="icon-wrench"></i>Ustawienia
 									</a>
 									<ul class="dropdown-menu dropdown-menu-dark mt-neg" aria-labelledby="navbarDropdown">
 										<li class="dropdown-my-color"><a class="dropdown-item text-light py-2" href="#">Zmień adres e-mail</a></li>
@@ -59,7 +60,7 @@
 									</ul>
 								</li>
 								<li class="nav-item li-change-color">
-									<a class="nav-link active text-light py-3" aria-current="page" href="index.html">Wyloguj się</a>
+									<a class="nav-link active text-light py-3" aria-current="page" href="index.html"><i class="icon-logout-1"></i>Wyloguj się</a>
 								</li>
 							</ul>
 						</div>
@@ -70,7 +71,7 @@
 		<main>
 			<article>
 				<div class="row justify-content-center">
-					<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+					<div class="col-xl-12 col-xxl-9 p-0">
 						<div class="content mt-2 p-4">	
 							<h3>DODAJ PRZYCHÓD</h3>
 							<div class="div-form-buttons mx-auto">
@@ -111,7 +112,7 @@
 		</main>
 		<footer>
 			<div class="row justify-content-center">	
-				<div class="col-sm-12 col-xl-10 col-xxl-8">
+				<div class="col-xl-12 col-xxl-9">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
