--- a/registration.html
+++ b/registration.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/fontello.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">	
 </head>
@@ -20,7 +21,7 @@
 		<header>
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-lg-6 p-4 mt-5">
-					<h1>BUDŻET OSOBISTY</h1>
+					<h1><i class="icon-dollar-1"></i>BUDŻET OSOBISTY</h1>
 					<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 				</div>
 			</div>
