Remove small mistakes

--- a/registration.html
+++ b/registration.html
@@ -20,7 +20,7 @@
 
 		<header>
 			<div class="row justify-content-center">
-				<div class="col-sm-12 col-lg-6 p-4 mt-5">
+				<div class="col-xl-12 col-xxl-9 p-4 mt-5">
 					<h1><i class="icon-dollar-1"></i>BUDŻET OSOBISTY</h1>
 					<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
 				</div>
